--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
   </head>
 
   <body style="width: 70%; max-width: 900px; height: 100%; margin: 0 auto; font-family: 'Arial';">
-	<h1>Vizabi export</h1>
-	<p>You just exported this file from Gapminder Offline. Congratulations!</p>
-	<p>If you don't see the chart below, you probably did not open the file from a webserver. Out of safety concerns, web browsers don't allow us to read the data straight from your hard drive. Run a webserver locally or upload the files to a webserver online to view them.</p>
-    <p>If you have any comments, praise, bugs or ideas that you would like to share, please let us know on <a href="http://getsatisfaction.com/gapminder/">Get Satisfaction</a>. We love feedback!</p>
+	<h1>주요 시군 지역의 총인구 대비 노인인구 비율 변화</h1>
+ 	  <p style="font-size: 110%">통계청에서 제공하는 <b>행정구역별 5세별 주민등록인구현황</b> 데이터를 활용하여 총인구 대비 노인인구 비율의 변화를 시각화</p>
+	  <p><b>&nbsp;&nbsp;- 시간범위:</b> 1992년~2021년 (30년)
+	  <p><b>&nbsp;&nbsp;- 공간단위:</b> 시군 (2021년 기준, 전국 167개)<br>
+	  &nbsp;&nbsp;&nbsp;· 예시 1) 부산광역시: '기장군'과 해당 군을 제외한 지역로 구분<br>
+	  &nbsp;&nbsp;&nbsp;· 예시 2) 용인시: 수지구, 기흥구, 처인구를 모두 '용인시'로 병합</p>
+	  <p><b>&nbsp;&nbsp;- 시각화 도구: </b><a href="https://www.gapminder.org/">갭마인더</a></p>
+	  <p style="font-size: 90%"><font color="red">&nbsp;* 하단의 <b><u>플레이 버튼(▷)</u></b>을 눌러 시간의 흐름에 따라 움직이는 버블들을 확인해 보세요.<br>
+		  &nbsp;&nbsp;&nbsp;&nbsp;이때 <b><u>EXPAND</u></b> 아이콘을 클릭해 전체화면으로 보는 것을 추천합니다.</font></p>
 	<div id="placeholder" style="width: 100%; height: 600px;"></div>
 
     <script src="config.js"></script>
