--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  &nbsp;&nbsp;&nbsp;· 예시 2) 용인시: 수지구, 기흥구, 처인구를 모두 '용인시'로 병합</p>
 	  <p><b>&nbsp;&nbsp;- 시각화 도구: </b><a href="https://www.gapminder.org/">갭마인더</a></p>
 	  <p style="font-size: 90%"><font color="blue">&nbsp;* 주요 시군 지역: 서울, 부산(기장군 제외), 인천(강화군, 옹진군 제외), 대구(달성군 제외), 대전, 광주광역시, 울산(울주군 제외), 세종 </p>
-	  <p style="font-size: 90%"><font color="red">&nbsp;* 하단의 <b><u>플레이 버튼(▷)</u></b>을 눌러 시간의 흐름에 따라 움직이는 버블들을 확인해 보세요. <b><u>EXPAND</u></b> 아이콘 클릭해 전체화면으로 보세요!</font></p>
+	  <p style="font-size: 90%"><font color="red">&nbsp;** 하단의 <b><u>플레이 버튼(▷)</u></b>을 눌러 시간의 흐름에 따라 움직이는 버블들을 확인해 보세요. <b><u>EXPAND</u></b> 아이콘 클릭해 전체화면으로 보는 것을 추천합니다!</font></p>
 	  
 	<div id="placeholder" style="width: 100%; height: 600px;"></div>
 
