--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
 
   <body style="width: 70%; max-width: 900px; height: 100%; line-height: 110%; margin: 0 auto; font-family: 'NanumSquare';">
-	<h1>주요 시군 지역의 총인구 대비 노인인구 비율 변화</h1>
+	<h1>주요 시군 지역의 도시별 전체인구 대비 노인인구 비율 변화</h1>
 	  <p style="font-size: 90%">(주요 시군: 서울, 부산(기장군 제외), 인천(강화군, 옹진군 제외), 대구(달성군 제외), 대전, 광주광역시, 울산(울주군 제외), 세종)</p>
- 	  <p style="font-size: 110%">통계청에서 제공하는 <b>행정구역별 5세별 주민등록인구현황</b> 데이터를 활용하여 총인구 대비 노인인구 비율의 변화를 시각화</p>
+ 	  <p style="font-size: 110%">통계청에서 제공하는 <b>행정구역별 5세별 주민등록인구현황</b> 데이터를 활용하여 도시별 전체인구 대비 노인인구 비율의 변화를 시각화</p>
 	  <p><b>&nbsp;&nbsp;- 시간범위:</b> 1992년~2021년(30년)
 	  <p><b>&nbsp;&nbsp;- 공간단위:</b> 시군(2021년 기준, 전국 167개)<br>
 	  &nbsp;&nbsp;&nbsp;· 예시 1) 부산광역시: '기장군'과 해당 군을 제외한 지역로 구분<br>
